--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,6 @@
 		<script src="controller/archiveController.js"></script>
 		<script src="controller/reminderController.js"></script>
 
-		<script src=”js/vendor.bundle.js”></script>
-		<script src=”js/app.bundle.js”></script>
+		<!-- <script src=”js/vendor.bundle.js”></script>
+		<script src=”js/app.bundle.js”></script> -->
 </html>
