--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -100,7 +100,7 @@
 
         </ul>
         <form class="navbar-form navbar-left">
-          <div class="input-group" id="inputid" ng-style="archivesearch" style="padding-right:3%;background-color:rgba(6,6,6,1);" uib-tooltip="Refresh" tooltip-placement="bottom" tooltip-append-to-body="true">
+          <div class="input-group" id="inputid" ng-style="archivesearch" style="padding-right:3%;background-color:rgba(6,6,6,1);" uib-tooltip="Search" tooltip-placement="bottom" tooltip-append-to-body="true">
             <input type="text" class="form-control" ng-model="search" placeholder="Search..." id="query" ng-style="archivequery" name="search" value="" />
             </div>
         </form>
@@ -122,7 +122,7 @@
     <div class="container-fluid">
       <!-- Sidebar -->
       <div id="sidebar-wrapper" ng-style="archivesidebar" style="margin-top:-19px">
-        <ul class="sidebar-nav">
+        <ul class="sidebar-nav" >
           <li class="sidebar-brand"><br> </li>
           <li class="sidebar-brand">
             <a href="#" class="navbar-brand" style="margin-top:8px;">
@@ -145,7 +145,7 @@
                 <path d="m0 0h24v24h-24z" fill="none"></path>
                 <path d="m20.78 13.16l-6.05-3.02c-0.23-0.09-0.47-0.14-0.73-0.14h-1v-2h1.75c1.66 0 3-1.34 3-3s-1.34-3-3-3c-0.75 0-1.14 0.22-1.75 0.75v-0.75c0-1.1-0.9-2-2-2s-2 0.9-2 2v0.75c-0.61-0.53-1-0.75-1.75-0.75-1.66 0-3 1.34-3 3s1.34 3 3 3h1.75v8.31l-4.57-0.95c-0.1-0.02-0.21-0.03-0.32-0.03-0.41 0-0.79 0.17-1.06 0.44l-1.05 1.06 6.59 6.59c0.36 0.36 0.86 0.58 1.41 0.58h9.06c1 0 1.77-0.74 1.92-1.7l1-7.03c0.01-0.09 0.02-0.18 0.02-0.27 0-0.83-0.5-1.54-1.22-1.84zm-11.53-6.16h-2c-1.1 0-2-0.9-2-2s0.9-2 2-2 2 0.9 2 2v2zm3.5-2c0-1.1 0.9-2 2-2s2 0.9 2 2-0.9 2-2 2h-2v-2z" fill="grey" > </path>
               </svg>
-              <span aria-hidden="true" ui-sref="reminder" ng-click ="remainderData()">Reminders</span>
+              <span aria-hidden="true" ui-sref="reminder" ng-click ="remainderData()"></span>Reminders
             </a>
           </li>
 
@@ -196,10 +196,10 @@
 
                 <!-- <div class="btn-group" uib-dropdown is-open="status.isopen"> -->
                 <p id="writeMsg">
-                    <i style="margin-left:16px" class="fa fa-hand-pointer-o fa-lg" aria-hidden="true" style="font-size:22px"></i>
+                    <!-- <i style="margin-left:16px" class="fa fa-hand-pointer-o fa-lg" aria-hidden="true" style="font-size:22px"></i>
                      <i style="margin-left:16px" class="fa fa-user-plus" style="font-size:36px" aria-hidden="true"> </i>
                      <i style="margin-left:16px" class="fa fa-paint-brush fa-lg" style="font-size:22px" aria-hidden="true"></i>
-                     <i style="margin-left:16px" class="fa fa-picture-o fa-lg" aria-hidden="true"></i>
+                     <i style="margin-left:16px" class="fa fa-picture-o fa-lg" aria-hidden="true"></i> -->
                       <button class="btn btn-warning" type="button" id="done" ng-click="savemsgcard()">DONE</button>
                 </p>
              </div>
