--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
 	 <link rel="stylesheet" type="text/css" href="css/index.css">
 	 <link rel="stylesheet" href="css/style.css">
 	 <link rel="stylesheet" href="css/dashboard.css">
+
+	 <!-- <link rel="stylesheet" href="css/styles.css">
+	 <link rel="stylesheet" href="css/angular-toastr.css"> -->
+
+
+
 	 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/ng-img-crop/0.3.2/ng-img-crop.css">
 	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	 <link rel="stylesheet" href="bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
