updated on 15th june

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -53,7 +53,8 @@
       <button id="fetchUser" ng-click ="login()"   ng-disabled="loginform.emailid.$dirty && loginform.emailid.$invalid ||
       loginform.password.$dirty && loginform.password.$invalid">Login</button>
       </p>
-
+      <button ng-click="authenticate('facebook')">Sign in with Facebook</button>
+      <!-- <button ng-click="authenticate('google')">Sign in with Google</button> -->
       <p class="message">Not registered? <a href="#signup">Create an account</a></p>
     </form>
   </div>
