--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -13,8 +13,8 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                      <li><a href="#login"><span class="fa fa-shield" aria-hidden="true"></span> Login</a></li>
-                      <li><a href="#signup"><span class="fa fa-comment" aria-hidden="true"></span> signup</a></li>
+                      <li><a ui-sref="login"><span class="fa fa-shield" aria-hidden="true"></span> Login</a></li>
+                      <li><a ui-sref="signup"><span class="fa fa-comment" aria-hidden="true"></span> signup</a></li>
                     </ul>
                 </div>
             </div>
@@ -63,7 +63,7 @@
           signupform.password.$dirty && signupform.password.$invalid">Signup</button>
       </p>
 
-      <p class="message">Not registered? <a href="#login">Already have account?</a></p>
+      <p class="message">Not registered? <a ui-sref="login">Already have account?</a></p>
     </form>
   </div>
 </div>
