--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,8 @@
 	 <script src="controller/profileImageController.js"></script>
 	 <script src="controller/archiveController.js"></script>
 	 <script src="controller/reminderController.js"></script>
+	 <script src="controller/trashController.js"></script>
+	 <script src="controller/collaboratorController.js"></script>
 
 </head>
 
