--- a/public/html/archive.html
+++ b/public/html/archive.html
@@ -1,9 +1,11 @@
 
 <div class="row" ng-class="gridlist" style="margin-top:34px;">
+  <!-- <div id="reminderdiv" >Archive</div> -->
 
 <div style="margin:22px 16px;" ></div>
 <div>
-  <div id="innote" ng-if="x.isArchive" ng-class="innote" ng-mouseover="icons=true" ng-mouseleave="icons=false" ng-repeat="x in message | filter:search as results track by $index" testpackery >
+
+  <div id="innote" ng-if="x.isArchive && !x.isDeleted" ng-class="innote" ng-mouseover="icons=true" ng-mouseleave="icons=false" ng-repeat="x in message | filter:search as results track by $index" testpackery >
 
       <div ng-class="showpreid" style="background-color:{{x.color}}">
         <div style="padding:2%;">
@@ -74,7 +76,9 @@
                   </a>
                   <ul uib-dropdown-menu aria-labelledby="simple-dropdown">
                         <li id="fulldrop">
-                            <a id="delete" ng-click = "deletecards(x._id)">Delete a note</a>
+                          <a id="delete" ng-click = "deletecards(x._id,'trash')">Delete a note</a>
+
+                            <!-- <a id="delete" ng-click = "deletecards(x._id)">Delete a note</a> -->
                             <a id="makeCopy" ng-click = "cardCopy(x)">Make a copy</a>
                         </li>
                     </ul>
