--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -76,10 +76,10 @@
                         <div><img class="circular--square col-sm-6"  ng-src="{{userinfo.local.profileImage || userinfo.facebook.picture || userinfo.google.picture}}" alt="{{userinfo.local.userName.charAt(0) ||userinfo.facebook.displayName.charAt(0) || userinfo.google.displayName.charAt(0) | uppercase}}"  uib-tooltip="Profile" tooltip-placement="bottom" tooltip-append-to-body="true" style="padding-left: -2px;align-self: center;cursor:pointer;"/></span>
                           <!-- <span class="gb_jb">Change</span> -->
                         </div>
-                        <a ng-click="changeProfileImage()" style="margin-left:26px;margin-top:16px;color:teal">change Profile Image</a><br/>
+                        <a ng-click="changeProfileImage()" style="margin-left:-1px;margin-top:16px;color:teal">change Profile Image</a><br/>
                         <div style="margin:16px 20px 30px 128px;display:block;">
-                          <div style="font-weight: bold;margin: -4px 0 0 -2px;"><b>{{userinfo.local.userName || userinfo.facebook.displayName || userinfo.google.displayName}}</b></div>
-                          <div style="margin-left:18px;color: #666;display: block;margin: -4px 0 0 -2px;">{{userinfo.local.email || userinfo.facebook.facebookEmail || userinfo.google.googleEmail}}</div>
+                          <div style="font-weight: bold;margin: -4px 0 0 -2px;word-wrap:break-word;"><b>{{userinfo.local.userName || userinfo.facebook.displayName || userinfo.google.displayName}}</b></div>
+                          <div style="margin-left:18px;color: #666;display: block;margin: -4px 0 0 -2px;word-wrap:break-word;">{{userinfo.local.email || userinfo.facebook.facebookEmail || userinfo.google.googleEmail}}</div>
                         </div>
                      </div>
 
@@ -89,7 +89,7 @@
                         <div class="profile3">
                         </div>
                      </div>
-                     <hr>
+                     <hr style="margin-top:10px;">
                        <div class="social-buttons" id="acbuttons" style="margin-left:6%;background: #E8E8E8;">
 
                          <a><span style="margin-left:25%"></span></a>
