--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,13 @@
 <head>
 		<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>mykeep</title>
+		<title>	Mykeep</title>
 		<link rel="icon" href="./images/logo6.jpg">
 
 		<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 	 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	 	<link rel="stylesheet" href="css/style.css">
 	 	<link rel="stylesheet" href="css/dashboard.css">
-
 
  		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  		<link rel="stylesheet" href="/bower_components/angular-bootstrap/ui-bootstrap-csp.css">
@@ -53,7 +52,7 @@
 	<body>
 			<div id="main"> <!-- MAIN CONTENT AND INJECTED VIEWS -->
 					<div ui-view></div>
-				</div>	<!-- angular templating --><!-- this is where content will be injected -->
+				</div>	<!-- angular templating --> <!-- this is where content will be injected -->
 	</body>
 
 </html>
