--- a/public/html/gridlistview.html
+++ b/public/html/gridlistview.html
@@ -48,7 +48,7 @@
                           </span>
                       </i>
 
-                <i id="collaborator" style="margin-left:8px;cursor:pointer;" class="fa fa-user-plus" style="font-size:36px;" aria-hidden="true"  ng-click="collaborator(x)" uib-tooltip="Collaborator"  tooltip-placement="bottom" tooltip-append-to-body="true">
+                <i id="collaborator" style="margin-left:8px;cursor:pointer;" class="fa fa-user-plus" style="font-size:36px;" aria-hidden="true"  ng-click="collaborator(x);" uib-tooltip="Collaborator"  tooltip-placement="bottom" tooltip-append-to-body="true">
                  </i>
 
               <i aria-hidden="true">
