--- a/public/html/login.html
+++ b/public/html/login.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #ccc;" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #293a48;" role="navigation">
       <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="#home">My Keep</a>
@@ -28,39 +28,56 @@
 
     <form name="loginform" ng-controller="loginController" style="margin-top:14%">
 
-      <p>
-        <div class="form-group has-feedback">
-      <input type="email" name="emailid" id="exampleInputEmaillog" placeholder="Email"  ng-model="emailid" required>
-        <span class="ion-at form-control-feedback"></span>
-      <span style="color:teal" ng-show="loginform.emailid.$dirty && loginform.emailid.$invalid">
-      <span ng-show="loginform.emailid.$error.required">Emailid is required.</span>
-      <span ng-show="loginform.emailid.$error.email">Invalid email address.</span>
-      </span>
-    </div>
-      </p>
+      <div>
+          <div class="form-group has-feedback">
+            <input type="email" name="emailid" id="exampleInputEmaillog" placeholder="Email"  ng-model="emailid" required>
+            <span class="ion-at form-control-feedback"></span>
+            <span style="color:teal" ng-show="loginform.emailid.$dirty && loginform.emailid.$invalid">
+                <span ng-show="loginform.emailid.$error.required">Emailid is required.</span>
+                <span ng-show="loginform.emailid.$error.email">Invalid email address.</span>
+            </span>
+        </div>
+      </div>
 
+      <div>
+          <input type="password" name="user" id="loginPassword" placeholder="Password"  ng-model="password" required>
+          <span style="color:teal" ng-show="loginform.password.$dirty && loginform.user.$invalid">
+              <span ng-show="loginform.password.$error.required">Password is required.</span>
+              <span ng-show="loginform.password.$error.password">Invalid email address.</span>
+          </span>
+      </div>
 
-      <p>
-      <input type="password" name="user" id="loginPassword" placeholder="Password"  ng-model="password" required>
-      <span style="color:teal" ng-show="loginform.password.$dirty && loginform.user.$invalid">
-      <span ng-show="loginform.password.$error.required">Password is required.</span>
-      <span ng-show="loginform.password.$error.password">Invalid email address.</span>
+      <div>
+          <button id="fetchUser" ng-click ="login()"   ng-disabled="loginform.emailid.$dirty && loginform.emailid.$invalid || loginform.password.$dirty && loginform.password.$invalid">Login</button>
+      </div>
 
-      </span>
-      </p>
+      <hr>
 
-      <p>
-      <button id="fetchUser" ng-click ="login()"   ng-disabled="loginform.emailid.$dirty && loginform.emailid.$invalid ||
-      loginform.password.$dirty && loginform.password.$invalid">Login</button>
-      </p>
-      <div style="margin-bottom:8px"><button ng-click="authenticate('facebook')" >Sign in with Facebook</button></div>
-      <div><button ng-click="authenticate('google')">Sign in with Google</button></div>
-      <p class="message">Not registered? <a ui-sref="signup">Create an account</a></p>
+      <a class="btn btn-block btn-social btn-google waves-effect waves-light" id="fbBtn" ng-click="authenticate('facebook')"  style="background-color:#3b5998;white-space: nowrap;border-color: rgba(0,0,0,0.2);" >
+          <span class="fa fa-facebook" ></span> Sign in with Facebook
+      </a>
+
+      <a class="btn btn-block btn-social btn-facebook" ng-click="authenticate('google')" style="background-color:#dd4b39;white-space: nowrap;border-color: rgba(0,0,0,0.2);" >
+          <span class="fa fa-google" id="googleBtn"></span> Sign in with Google
+      </a>
+
+      <div class="message">Not registered? <a ui-sref="signup">Create an account</a></div>
     </form>
   </div>
 </div>
 </div>
 
+<!-- <div><button ng-click="authenticate('google')" style="background-color:#dd4b39">Sign in with Google</button></div> -->
+
+<!-- <div style="margin-bottom:8px"><button ng-click="authenticate('facebook')" style="background-color:#3b5998;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;">Sign in with Facebook</button>
+</div> -->
+<!-- <i class="fa fa-facebook left"></i> -->
+<!-- position: relative;
+    padding-left: 44px;
+    text-align: left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; -->
 <!-- <button id="fetchUser" ng-click ="login()"   ng-disabled="loginform.emailid.$dirty && loginform.emailid.$invalid || -->
 
 
