--- a/public/html/pinup.html
+++ b/public/html/pinup.html
@@ -48,7 +48,9 @@
                           </span>
                       <i>
 
-                <i style="margin-left:8px" class="fa fa-user-plus" style="font-size:36px" aria-hidden="true"> </i>
+                        <i id="collaborator" style="margin-left:8px;cursor:pointer;" class="fa fa-user-plus" style="font-size:36px;" aria-hidden="true"  ng-click="collaborator(x);" uib-tooltip="Collaborator"  tooltip-placement="bottom" tooltip-append-to-body="true">
+                         </i>
+              
 
               <i aria-hidden="true">
                 <span  uib-dropdown on-toggle dropdown-append-to-body="true" style="margin-left:6px;">
