--- a/public/html/gridlistview.html
+++ b/public/html/gridlistview.html
@@ -68,6 +68,9 @@
                   <img id='archive'  ng-click="archive(x._id,'true','false')" style="width:14px;height:35%;cursor:pointer;" src="../images/archive.png" uib-tooltip="Archive"  tooltip-placement="bottom" tooltip-append-to-body="true" />
                 </i>
 
+        <i style="margin-left:8px" style="font-size:36px;" aria-hidden="true">
+              <img id='archive'  ng-click="facebookshare(x)" style="width:16px;height:35%;cursor:pointer;" src="../images/share.png" uib-tooltip="Share with Facebook"  tooltip-placement="bottom" tooltip-append-to-body="true" />
+        </i>
 
          <i style="margin-left:6px">
             <span uib-dropdown on-toggle dropdown-append-to-body="true" >
