--- a/public/html/popup.html
+++ b/public/html/popup.html
@@ -4,7 +4,7 @@
   <h3 class="modal-title" newcontenteditable contenteditable="true" ng-model="$ctrl.title1" style="outline: none;border-top:none;">Title</h3>
 </div>
 
-<div class="modal-body" newcontenteditable contenteditable="true" ng-model="$ctrl.content" style="outline: none;border-top:none;">
+<div class="modal-body" newcontenteditable contenteditable="true" ng-model="$ctrl.content" style="outline: none;border-top:none;font-size:16px;">
   <span><b></b></span>{{title}}
 </div>
 
