--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
  		<link rel="stylesheet" href="/bower_components/angular-bootstrap/ui-bootstrap-csp.css">
 		<link rel="stylesheet" href="/bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
 		<link rel="stylesheet" href="/bower_components/ng-img-crop/compile/minified/ng-img-crop.css">
+		<link rel="stylesheet" href="/bower_components/angular-toastr/dist/angular-toastr.min.css">
 
 		<script src="/bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="/bower_components/angular/angular.min.js"></script>
@@ -28,6 +29,10 @@
 		<script src="/bower_components/draggabilly/dist/draggabilly.pkgd.js"></script>
  		<script src="/bower_components/ng-img-crop/compile/minified/ng-img-crop.js"></script>
  		<script src="/bower_components/satellizer/dist/satellizer.min.js"> </script>
+		<script src="/bower_components/angular-toastr/dist/angular-toastr.tpls.js"> </script>
+		<script src="https://connect.facebook.net/enUS/all.js"></script>
+
+
 
 		<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
